--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
   <property name="xrechnung.cvd.version.major.minor" value="0.9" />
   <property name="xrechnung.cvd.id"
     value="${xrechnung.spec.id}#compliant#urn:xeinkauf.de:kosit:xrechnung:cvd_${xrechnung.cvd.version.major.minor}" />
-  <property name="validator.configuration.version.full" value="2025-10-31-SNAPSHOT" />
+  <property name="validator.configuration.version.full" value="2026-01-31" />
   <property name="dist.name"
     value="validator-configuration-xrechnung_${xrechnung.version}_${validator.configuration.version.full}.zip" />
 
@@ -70,7 +70,7 @@
 
 
   <!-- XRechnung Schematron Rules section -->
-  <property name="xr.schematron.version.major.minor" value="2.4"/>
+  <property name="xr.schematron.version.major.minor" value="2.5"/>
   <property name="xr.schematron.version.patch" value="0"/>
   <property name="xr.schematron.version.full" value="${xr.schematron.version.major.minor}.${xr.schematron.version.patch}"/>
 
@@ -78,7 +78,7 @@
   <property name="xr.schematron.zip" value="xrechnung-${xrechnung.version}-schematron-${xr.schematron.version.full}.zip"/>
   <property name="xr.schematron.download.url" value="${xr.schematron.download.url.prefix}/${xr.schematron.zip}"/>
 
-  <property name="xr.testsuite.version" value="2025-07-10" />
+  <property name="xr.testsuite.version" value="2026-01-31" />
   <property name="xr.testsuite.download.url.prefix"
     value="https://github.com/itplr-kosit/xrechnung-testsuite/releases/download" />
 
