Remove ex post xslt on compiled schematron

--- a/build.xml
+++ b/build.xml
@@ -299,10 +299,7 @@
       <param name="schematron.file" value="${download.dir}/schematron/EN16931-UBL-validation.sch"/>
       <param name="xslt.output.dir" value="${build.dir}"/>
     </antcall>
-    <!-- customize CEN schematron rules for UBL -->
-    <xslt in="${build.dir}/EN16931-UBL-validation.xsl" out="${resource.xsl.cen.ubl}" style="${src.dir}/remove-dead-apply-templates.xsl" classpathref="cp.saxon.xslt">
-      <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-    </xslt>
+    <copy file="${build.dir}/EN16931-UBL-validation.xsl" tofile="${resource.xsl.cen.ubl}" overwrite="true"/>
   </target>
 
   <target name="compile-cen-cii">
@@ -313,10 +310,7 @@
       <param name="schematron.file" value="${download.dir}/schematron/EN16931-CII-validation.sch"/>
       <param name="xslt.output.dir" value="${build.dir}"/>
     </antcall>
-    <!-- customize CEN schematron rules for CII -->
-    <xslt in="${build.dir}/EN16931-CII-validation.xsl" out="${resource.xsl.cen.cii}" style="${src.dir}/remove-dead-apply-templates.xsl" classpathref="cp.saxon.xslt">
-      <factory name="net.sf.saxon.TransformerFactoryImpl"/>
-    </xslt>
+    <copy file="${build.dir}/EN16931-CII-validation.xsl" tofile="${resource.xsl.cen.cii}" overwrite="true"/>
   </target>
 
   <target name="compile-cen-rules" depends="retrieve-cen-rules,compile-cen-rules-only" description="Works for zip from master and release zips"/>
